--- a/slides/3-library.mdx
+++ b/slides/3-library.mdx
@@ -4,14 +4,49 @@
 
 ## jQuery の天下
 
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
+
 - jQuery が広く使われていた
 - (TODO リストのコード例)
 - JavaScript にはない便利な文法があった
 - ブラウザ間の JavaScript 実装の差分を jQuery で吸収できた
 
+<!-- block-end -->
+<!-- block-end -->
+
 ---
 
 ## どんどんリッチになる Web フロントエンドの UI
+
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
+
+- UI の部品（コンポーネント）の再利用性
+  - ユーザーの見た目上は同じ部品でも、繰り返し似たような記述を、HTML/CSS/JavaScript で繰り返し書かないといけなかった
+  - 例: ボタン
+    - ボタン用の CSS を書く
+    - ボタンを表示したい箇所で、ボタンの HTML を書く
+    - ボタンを押した時に実行したい処理を JavaScript に書く
+
+<!-- block-end -->
+<!-- block-end -->
+
+---
+
+## どんどんリッチになる Web フロントエンドの UI
+
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
 
 - jQuery で表現するのが辛くなってきた
   - Web フロントエンド専用のライブラリ、というわけではないので、実装の方針・設計などはエンジニアに委ねられる
@@ -24,6 +59,20 @@
       - ボタン用の CSS を書く
       - ボタンを表示したい箇所で、ボタンの HTML を書く
       - ボタンを押した時に実行したい処理を JavaScript に書く
+
+<!-- block-end -->
+<!-- block-end -->
+
+---
+
+## どんどんリッチになる Web フロントエンドの UI
+
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
+
 - CSS の干渉・依存・再利用性
   - JavaScript で起きていたような module の問題
   - セレクターがぶつかってしまう
@@ -31,9 +80,18 @@
   - :thinking_face: 他の CSS に影響を与えない、特定の scope に閉じた CSS がほしい...
   - :thinking_face: HTML/JavaScript/CSS を意味のあるまとまり毎に定義して、再利用できればよいのに...
 
+<!-- block-end -->
+<!-- block-end -->
+
 ---
 
 ## React.js (宣言的 UI) の登場
+
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
 
 - JavaScript first
   - JSX を返却する JavaScript の class / function
@@ -49,9 +107,18 @@
   - styled-component / emotion が有名
   - (jQuery のコードを React で書きなおしたものを載せる)
 
+<!-- block-end -->
+<!-- block-end -->
+
 ---
 
 ## 現在の Web フロントエンドライブラリのメタ
+
+<!-- block-start: grid -->
+<!-- block-start: column -->
+
+<!-- block-end -->
+<!-- block-start: column, left -->
 
 - React.js が筆頭
 - 次点で Vue.js が続く
@@ -60,3 +127,6 @@
   - 開発元である Vercel の体制が安泰
     - 大量の資金調達
     - JavaScript / TypeScript の OSS 開発者を無限に採用
+
+<!-- block-end -->
+<!-- block-end -->
