--- a/slides/5-nitpick.mdx
+++ b/slides/5-nitpick.mdx
@@ -12,6 +12,8 @@
     - 使用されていない変数・関数を定義していないか
     - const で定義できる箇所で let / var を使っていないか
 
+https://eslint.org/
+
 ---
 
 ## formatter
@@ -20,36 +22,27 @@
 - prettier が一般的に利用される
 - 「JavaScript 的にはどちらでも正しいが、チームとして特定の記法のみを利用する方針としたい」などといった場合に、formatter にコードを自動整形させ format を強制できる
 
-<!-- block-start: grid -->
-<!-- block-start: column -->
-
-<!-- block-end -->
-<!-- block-start: column, left -->
-
-<!-- block-end -->
-<!-- block-end -->
+https://prettier.io/
 
 ---
 
 ## まとめ
 
-- 色々あって複雑になっている
+- フロントエンド・JavaScript の開発体験を良くする動きが複数の観点で行われてきた
+  - 結果純粋な HTML/CSS/JavaScript では済まない、重厚なスタックで開発を行うようになっている
 - 一気に全領域キャッチアップするのは難しいので、全体を薄く触って、少しずつ各領域の知識をつけていく
 
 ---
 
 ## 課題の共有
 
-<!-- block-start: grid -->
-<!-- block-start: column -->
-
-<!-- block-end -->
-<!-- block-start: column, left -->
-
-<!-- block-end -->
-<!-- block-end -->
-
-- https://github.com/queq1890/fe-new-grad-training
-  - 広く薄く触るためのチュートリアル、完了後も多くの分からないことが残ると思う旨をしゃべる
-  - チュートリアル完了後の学習リソースについて
-- 実装をしたリポジトリの URL を moodle に提出
+- React.js と TypeScript をとりあえず動かしてみるチュートリアルのリポジトリを作りました
+  - https://github.com/queq1890/fe-new-grad-training
+  - 難易度は、
+    - フロントエンド経験者には簡単
+    - フロントエンド未経験者は謎の概念にたくさん触れることになりそう
+- チュートリアルを読みながら実装
+  - チャプター 05 完了までを目標にしてください :pray:
+- 自分の実装を置くリポジトリを作る
+  - リポジトリの URL を moodle から提出
+  - (もしチャプター 05 まで完了していなくても、WIP な状態のリポジトリの URL の提出をお願いします！)
