--- a/slides/3-library.mdx
+++ b/slides/3-library.mdx
@@ -80,13 +80,13 @@ https://reactjs.org/
 
 ```jsx
 // CSS in JS
-const Container = styled('div')`
+const Container = styled("div")`
   display: flex;
   width: 100%;
   height: 100%;
 `;
 
-const StyledButton = styled('button')`
+const StyledButton = styled("button")`
   color: red;
   width: 100px;
 `;
@@ -122,7 +122,7 @@ const App = () => (
 <!-- block-start: column -->
 
 ![state](../images/state-of-javascript.png)
-https://2021.stateofjs.com/en-US/libraries/front-end-frameworks
+https://2022.stateofjs.com/en-US/libraries/front-end-frameworks/
 
 <!-- block-end -->
 <!-- block-start: column, left -->
@@ -131,7 +131,7 @@ https://2021.stateofjs.com/en-US/libraries/front-end-frameworks
 - React.js を使う場合は、React.js のフレームワークである Next.js を採用するのがデファクトになりつつある
   - 開発元である Vercel の体制が安泰
     - 大量の資金調達
-    - JavaScript / TypeScript の OSS 開発者を無限に採用
+    - JavaScript / TypeScript の OSS 開発者を採用
 
 <!-- block-end -->
 <!-- block-end -->
