--- a/slides/4-typing.mdx
+++ b/slides/4-typing.mdx
@@ -8,7 +8,7 @@
 <!-- block-start: column -->
 
 ```tsx
-const str: string = 'this is string value';
+const str: string = "this is string value";
 const num: number = 12345;
 const bool: boolean = true;
 ```
@@ -45,9 +45,9 @@ const bool: boolean = true;
 
 ```ts
 const user = {
-  firstName: 'Angela',
-  lastName: 'Davis',
-  role: 'Professor',
+  firstName: "Angela",
+  lastName: "Davis",
+  role: "Professor",
 };
 
 console.log(user.name);
@@ -69,3 +69,13 @@ https://www.typescriptlang.org/
 
 <!-- block-end -->
 <!-- block-end -->
+
+---
+
+## ここまでのまとめ
+
+- フロントエンド・JavaScript の開発体験を良くする動きが複数の観点で行われてきた
+  - 結果純粋な HTML/CSS/JavaScript では済まない、重厚なスタックで開発を行うようになっている
+- JavaScript が誕生した当時には存在しなかった module の概念を実現するために、module bundler が利用されている
+- 生の JavaScript では表現しきれない UI を実現するために、React.js をはじめとしたライブラリが利用されている
+- 複雑化する JavaScript アプリケーション開発のため、型の恩恵にあずかれる TypeScript が利用されている
