--- a/slides/6-related-stacks.mdx
+++ b/slides/6-related-stacks.mdx
@@ -71,4 +71,4 @@ https://github.com/sun-asterisk/architecture-guideline/tree/main/front-end
 ## その他学習におすすめのリソース郡
 
 - [こちら](https://github.com/queq1890/fe-new-grad-training/blob/main/appendix/02-self-taught-resources/appendix.md)にまとめています
-  - 「JS Primer」と「りあクト！」が個人的におすすめ
+  - 「JS Primer」「りあクト！」「プロを目指す人のための TypeScript 入門」が個人的におすすめ
