--- a/slides/0-hi.mdx
+++ b/slides/0-hi.mdx
@@ -33,6 +33,12 @@ https://www.wantedly.com/companies/sun-asterisk/post_articles/395933
 - スライド: 現代 Web フロントエンドを取り巻く状況をシェアし、これから作るもののイメージを作る
 - 課題: Udemy のチュートリアルを通して、React.js を使った開発の流れを体験する
 
+<br />
+
+※他の授業・課題と異なり、授業の内容と課題の内容が 1:1 でリンクするようなものではありません :sob:
+
+「フロントエンドの開発ってこういう概念を取り扱うんだ」といった全体観をざっくりつける
+
 ---
 
 ## スライド・課題でやらないことの説明
