--- a/slides/4-typing.mdx
+++ b/slides/4-typing.mdx
@@ -32,7 +32,7 @@ const bool: boolean = true;
 
 - JavaScript アプリケーションは大規模化・複雑化していった
   - アプリケーションの規模に対して、言語仕様がつらい
-    - (ECMAScript による使用統一もまだ)
+    - (ECMAScript による仕様統一もまだ)
     - (module の仕組みは当時まだ登場していない)
     - 型検査の仕組みがほしい...!
 
