--- a/slides/0-hi.mdx
+++ b/slides/0-hi.mdx
@@ -44,3 +44,15 @@ https://www.wantedly.com/companies/sun-asterisk/post_articles/395933
 ## スライド・課題でやらないことの説明
 
 - HTML/CSS/JavaScript/TypeScript の入門
+
+---
+
+## 目次
+
+- 1. Web フロントエンドとは？
+- 2. JavaScript の module について
+- 3. フロントエンドライブラリの変遷
+- 4. 型付けの変遷
+- 5. React.js コンポーネントの定義例
+- 6. React.js に関連した技術郡の紹介
+- 7. まとめ
