--- a/slides/7-conclusion.mdx
+++ b/slides/7-conclusion.mdx
@@ -7,11 +7,11 @@
 ## 課題について
 
 - Udemy のチュートリアルを受講し、チュートリアルで実装した内容を GitHub リポジトリに push
-- https://github.com/orgs/sun-asterisk/repositories に、 `fe-udemy-<名字>` のような命名の空のリポジトリを用意してあるので、ご自身に対応したリポジトリに push してください
+- https://github.com/orgs/sun-asterisk/repositories に、 `fe-udemy-<名字>` のような命名の空のリポジトリを用意してあるので、ご自身のお名前に対応したリポジトリをご利用ください
 - Git の commit log は見ません
 - 必ずしもチュートリアル内で紹介されるコード・参考リポジトリのコードと一致している必要はありません
   - チュートリアル内で紹介されているライブラリのバージョンが変わっていることによる違い
-  - リファクタ
+  - こうした方が読みやすいんじゃないか、といったリファクタ
 - もし期限までに完了していなくても、WIP な状態のリポジトリの URL の提出をお願いします！
 
 <br />
