--- a/slides/6-related-stacks.mdx
+++ b/slides/6-related-stacks.mdx
@@ -58,7 +58,7 @@ https://github.com/alan2207/bulletproof-react
 
 ---
 
-## Sun\* Architecture Gudeline
+## Sun\* Architecture Guideline
 
 https://github.com/sun-asterisk/architecture-guideline/tree/main/front-end
 
